--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -141,12 +141,25 @@
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
         <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
-        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro 1607 by Adderly (22.06.2022)</h6>
-        <img class="u-expanded-width-sm u-image u-image-default u-image-5" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
-        <p class="u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows101709-2022-08-15-15-25-16.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows101709-2022-08-15-15-23-25.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-7" src="images/2022-08-15152355.png" alt="" data-image-width="589" data-image-height="264">
+        <p class="u-text u-text-default-xl u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
+          <br> Удалены приложения "​Камера, Почта, One Note, Windows Photos, Windows Sound Recorder, Get Started, People , Xbox, Windows Store" <br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
+          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
+          <br>Включён DirectPlay&nbsp;<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>
+          <br>Образ весит 5.32 GB, после установки Windows занимает 11 GB <br>
+          <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
+        </p>
+        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
+        <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro 1607 by Adderly (22.06.2022)</h6>
+        <img class="u-expanded-width-sm u-image u-image-default u-image-8" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/photo_2022-06-22_01-25-042.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-10" src="images/photo_2022-06-22_01-25-04.jpg" alt="" data-image-width="1280" data-image-height="719">
+        <p class="u-text u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Удалён OneDrive и Microsoft Defender из автозагрузки <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
@@ -157,22 +170,7 @@
           <br>Образ весит 4.66 GB, после установки Windows занимает 10.7 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1607 (Anniversary Update)
         </p>
-        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
-        <h6 class="u-text u-text-default u-text-white u-text-6">Windows 10 Pro V2 1709 by Adderly (15.08.2022)</h6>
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows10x64-2022-06-22-21-41-26.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-10" src="images/Windows10x64-2022-06-22-21-41-54.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-11" src="images/Windows10x64-2022-06-22-21-41-11.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-default-xl u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления.&nbsp;<br>
-          <br> Удалены приложения "X" <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
-          <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
-          <br>Включён DirectPlay&nbsp;<br>
-          <br>Отключен файл подкачки<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>
-          <br>Образ весит X GB, после установки Windows занимает X GB <br>
-          <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
-        </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
         <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
         <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 11</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
@@ -184,6 +182,7 @@
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
         <a href="https://drive.google.com/file/d/1jSfHGmjKvO82IhDkUoEbl-PSPQHujzhd/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 Pro V2 21H2 by Adderly [Google Drive]</a>
         <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 Pro 1607 by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1ee90-yibkYTH7jZH6C2QdXX635H9H1nW/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-3" target="_blank">Скачать Windows 10 Pro V2 1709 by Adderly [Google Drive]</a>
       </div>
     </section>
     
