--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -121,32 +121,30 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-0039" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 8.0<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.0 Pro by Adderly (23.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.0 Pro V2 by Adderly (15.08.2022)<br>
         </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x64-2022-06-23-19-19-38.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-23-19-21-17.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows10x64-2022-06-23-19-20-02.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-image-4" src="images/Windows10x64-2022-06-23-19-20-55.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows10x64-2022-06-23-19-19-47.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows10x64-2022-06-23-19-22-40.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-xl u-text u-text-default u-text-white u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
-          <br>Добавлена папка KMS <br>
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows8.0byAdderly-2022-08-15-18-05-29.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows8.0byAdderly-2022-08-15-18-01-03.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.0byAdderly-2022-08-15-18-03-11.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-4" src="images/Windows8.0byAdderly-2022-08-15-18-03-52.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-5" src="images/2022-08-15180806.png" alt="" data-image-width="596" data-image-height="256">
+        <p class="u-align-center-xl u-text u-text-default u-text-white u-text-3">Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
-          <br>Интегрирован Framework 4.6<br>
+          <br>Интегрирован Framework 4.6, 3.5, 3.0, 2.0<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
-          <br> Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
+          <br>Удалены Bing приложения (интеграции)<br>
           <br>Добавлены темы "Архитектура, Персонажи, Лашдафт" из Windows 7 <br>
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
-          <br>Образ весит 5.83 GB, после установки Windows занимает 17 GB. (Так как установлены почти все обновления)<br>
+          <br>Образ весит 4.3 GB, после установки Windows занимает 12.5 GB.<br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
-        <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0 Pro by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1LQW3fzzeafeKR-0r-5Y8VKUrgDAww4TE/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0 Pro by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/g4cuskumg56nimw/Windows+8.0+V2+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MediaFire]</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
@@ -156,8 +154,8 @@
     <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-5c12">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
-        <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hidden-lg u-hidden-xl u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank"> Скачать Windows 8.0 Pro by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1LQW3fzzeafeKR-0r-5Y8VKUrgDAww4TE/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hidden-lg u-hidden-xl u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank"> Скачать Windows 8.0 Pro by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/g4cuskumg56nimw/Windows+8.0+V2+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 8.0 Pro by Adderly [MediaFire]</a>
       </div>
     </section>
     
