--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -131,12 +131,13 @@
         <img class="u-image u-image-default u-image-3" src="images/2022-08-14214127.png" alt="" data-image-width="495" data-image-height="263">
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-14214424.png" alt="" data-image-width="603" data-image-height="340">
         <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же рег файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
-          <br>Удалены приложения "Почта, One Note, Камера" <br>
+          <br>Удалены приложения "Люди, Почта, One Note, Камера" <br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay&nbsp;<br>
           <br>Отключен файл подкачки<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу
+ (по желанию можно выключить)<br>
           <br>Образ весит 6.5 GB, после установки Windows занимает 19.8 GB (стандартная 21H2 занимает 24 GB) <br>
           <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
         </p>
@@ -150,7 +151,7 @@
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay&nbsp;<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
           <br>Образ весит 5.32 GB, после установки Windows занимает 11 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
         </p>
