--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -139,7 +139,7 @@
           <br>Добавлены темы "Архитектура, Персонажи, Лашдафт" из Windows 7 <br>
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу ​(по желанию можно выключить)<br>
           <br>Образ весит 4.3 GB, после установки Windows занимает 12.5 GB.<br>
           <br>Образ основан на официальном MSDN Windows 8.0.
         </p>
