--- a/Длительность-установки-сборок.html
+++ b/Длительность-установки-сборок.html
@@ -120,7 +120,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-image u-section-1" id="sec-6f8f" data-image-width="597" data-image-height="137">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-align-center u-text u-text-white u-text-1">Тут будет информация о длительности установки сборок от Аддерли На SSD<br>Длительность может не совпадать с вашими подсчетами.<br>Все проверено на комплектующих, написанные ниже:
         </h3>
         <p class="u-align-center u-text u-text-white u-text-2">Комплектующие ноутбука:</p>
