--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
           </span>
           <br>
         </h1>
-        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-1">Информация о сборках</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-2">Сборки Windows 7</a>
-        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-3">Сборки Windows Mini</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-1">Сборки Windows 7</a>
+        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-2">Сборки Windows Mini</a>
+        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Информация о сборках</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
         <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-6">Советы по использованию</a>
@@ -146,6 +146,7 @@
         <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-16" target="_blank">Поддержать Автора сборок</a>
         <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-17" target="_blank">Сборки от Аддерли Telegram</a>
         <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли YouTube</a>
+        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-19" target="_blank">Обзоры и отзывы о Сборках от Аддерли</a>
         <h4 class="u-text u-text-body-alt-color u-text-2">Подпишись! </h4>
       </div>
     </section>
