--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -111,6 +112,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -151,10 +153,11 @@
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-14">Старые Windows</a>
         <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-15" target="_blank">По поводу uTorrent раздач</a>
-        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-16" target="_blank">Поддержать Автора сборок</a>
-        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-17" target="_blank">Сборки от Аддерли Telegram</a>
-        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли YouTube</a>
-        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-19">Обзоры и отзывы о Сборках от Аддерли</a>
+        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-16" target="_blank">Проверки на целостность</a>
+        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-17" target="_blank">Поддержать Автора сборок</a>
+        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли Telegram</a>
+        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-19" target="_blank">Сборки от Аддерли YouTube</a>
+        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-20">Обзоры и отзывы о Сборках от Аддерли</a>
         <h4 class="u-text u-text-body-alt-color u-text-2">Подпишись! </h4>
       </div>
     </section>
