--- a/Информация-о-сборках.html
+++ b/Информация-о-сборках.html
@@ -74,6 +74,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -109,6 +110,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -135,6 +137,8 @@
         <a href="Длительность-установки-сборок.html" data-page-id="2739421494" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-2">Длительности установок сборок</a>
         <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-3"> Советы по использованию</a>
         <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-4">Про uTorrent раздачи</a>
+        <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-5"> Обзоры и отзывы</a>
+        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-6">Проверки на целостность</a>
       </div>
     </section>
     
