--- a/Проверка-на-целостность.html
+++ b/Проверка-на-целостность.html
@@ -73,6 +73,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -108,6 +109,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Отзывы-и-обзоры.html">Отзывы и обзоры</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Проверка-на-целостность.html">Проверка на целостность</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
@@ -126,9 +128,41 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-grey-90 u-section-1" id="sec-bbd5">
-      <div class="u-clearfix u-sheet u-sheet-1">
+    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-bbd5">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Результаты проверок на целостность</h1>
+        <h2 class="u-text u-text-default u-text-2">Windows 11 21H2 V3 by Adderly</h2>
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows11V321H2byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-3">Windows проходит проверку на целостность.<br>
+        </h4>
+        <h2 class="u-text u-text-default u-text-4">Windows 10 21H2 V2 by Adderly</h2>
+        <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10V221H2byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-5">Windows проходит проверку на целостность.<br>Но восстанавливает так называемые поврежденные файлы,<br>потому что удалено несколько приложений.<br>Про это написано в листинге изменений Windows 10 21H2 V2 by Adderly.<br>После повторной проверки, никаких восстановлений не будет.
+        </h4>
+        <h2 class="u-text u-text-default u-text-6"> Windows 10 1709 V2 by Adderly</h2>
+        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows10V21709byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-7">Windows проходит проверку на целостность.<br>
+        </h4>
+        <h2 class="u-text u-text-default u-text-8"> Windows 10 1607 by Adderly</h2>
+        <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows101607byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-9">Windows проходит проверку на целостность.<br>
+        </h4>
+        <h2 class="u-text u-text-default u-text-10">Windows 8.1 V5 by Adderly</h2>
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows8.1V5byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-11">Windows проходит проверку на целостность.<br>
+        </h4>
+        <h2 class="u-text u-text-default u-text-12">Windows 8.1 Lite x32 by Adderly</h2>
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows8.1Litex32byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-13">Windows проходит проверку на целостность.<br>
+        </h4>
+        <h2 class="u-text u-text-default u-text-14">Windows 8.0 V2 by Adderly</h2>
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows8.0V2byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-15"> Windows проходит проверку на целостность.<br>Но восстанавливает так называемые поврежденные файлы,<br>потому что удалено несколько приложений.<br>Про это написано в листинге изменений Windows 8.0 V2 by Adderly.<br>После повторной проверки, никаких восстановлений не будет.<br>
+        </h4>
+        <h2 class="u-text u-text-default u-text-16">Windows 7 V4 by Adderly</h2>
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7V4byAdderly.png" alt="" data-image-width="1024" data-image-height="768">
+        <h4 class="u-text u-text-default u-text-17"> Windows проходит проверку на целостность.<br>Но восстанавливает так называемые поврежденные файлы,<br>потому что установлен патч для тем.<br>После повторной проверки, никаких восстановлений не будет.<br>
+        </h4>
       </div>
     </section>
     
