--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-13">Софт от Аддерли</a>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-14">Старые Windows</a>
         <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-15" target="_blank">По поводу uTorrent раздач</a>
-        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-16" target="_blank">Проверки на целостность</a>
+        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-16" target="_blank">Проверки на целостность</a>
         <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-17" target="_blank">Поддержать Автора сборок</a>
         <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли Telegram</a>
         <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-19" target="_blank">Сборки от Аддерли YouTube</a>
